@@ -1,3 +1,10 @@
+2007-05-23  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil/StructureWriter.cs
+	  Mono.Cecil/ReflectionWriter.cs
+	  Mono.Cecil.Cil/CodeWriter.cs:
+		Emit MemberReferences rows on demand.
+
 2007-05-16  Jb Evain  <jb@nurv.fr>
 
 	* Mono.Cecil.Binary/ImageReader.cs:
